--- a/iOSEngineerCodeCheck/Settings.bundle/com.mono0926.LicensePlist.plist
+++ b/iOSEngineerCodeCheck/Settings.bundle/com.mono0926.LicensePlist.plist
@@ -44,6 +44,14 @@
 		</dict>
 		<dict>
 			<key>File</key>
+			<string>com.mono0926.LicensePlist/MarqueeLabel</string>
+			<key>Title</key>
+			<string>MarqueeLabel</string>
+			<key>Type</key>
+			<string>PSChildPaneSpecifier</string>
+		</dict>
+		<dict>
+			<key>File</key>
 			<string>com.mono0926.LicensePlist/PKHUD</string>
 			<key>Title</key>
 			<string>PKHUD</string>
