--- a/iOSEngineerCodeCheck/Settings.bundle/com.mono0926.LicensePlist.plist
+++ b/iOSEngineerCodeCheck/Settings.bundle/com.mono0926.LicensePlist.plist
@@ -36,6 +36,14 @@
 		</dict>
 		<dict>
 			<key>File</key>
+			<string>com.mono0926.LicensePlist/JXMarqueeView</string>
+			<key>Title</key>
+			<string>JXMarqueeView</string>
+			<key>Type</key>
+			<string>PSChildPaneSpecifier</string>
+		</dict>
+		<dict>
+			<key>File</key>
 			<string>com.mono0926.LicensePlist/LicensePlist</string>
 			<key>Title</key>
 			<string>LicensePlist</string>
@@ -47,14 +55,6 @@
 			<string>com.mono0926.LicensePlist/lottie-ios</string>
 			<key>Title</key>
 			<string>lottie-ios</string>
-			<key>Type</key>
-			<string>PSChildPaneSpecifier</string>
-		</dict>
-		<dict>
-			<key>File</key>
-			<string>com.mono0926.LicensePlist/MarqueeLabel</string>
-			<key>Title</key>
-			<string>MarqueeLabel</string>
 			<key>Type</key>
 			<string>PSChildPaneSpecifier</string>
 		</dict>
